force-app/main/default/objects/Property__c/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <inlineHelpText>Property&apos;s Address Line 1</inlineHelpText>
    <label>Address Line 1</label>
    <length>30</length>
    <type>Text</type>
</CustomField>