force-app/main/default/objects/Property__c/fields/Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_2__c</fullName>
    <inlineHelpText>Property&apos;s Address Line 2</inlineHelpText>
    <label>Address Line 2</label>
    <length>30</length>
    <type>Text</type>
</CustomField>