force-app/main/default/objects/Property__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>Property is located in this City</inlineHelpText>
    <label>City</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>