force-app/main/default/objects/Property__c/fields/House_Type__c.field-meta.xml
<CustomField>
    <fullName>House_Type__c</fullName>
    <description>No. of Bed and Bath. Each has a Hall and Kitchen</description>
    <inlineHelpText>No. of Bed and Bath. Every type has a Hall and a Kitchen</inlineHelpText>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1Bed 1Bath</fullName>
            </value>
            <value>
                <fullName>2Bed 1Bath</fullName>
            </value>
            <value>
                <fullName>2Bed 2Bath</fullName>
            </value>
            <value>
                <fullName>3Bed 2Bath</fullName>
            </value>
            <value>
                <fullName>4Bed 2Bath</fullName>
            </value>
            <value>
                <fullName>5Bed 3Bath</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>