force-app/main/default/objects/Property__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Property Price</description>
    <inlineHelpText>Property Price</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>