force-app/main/default/objects/Property__c/fields/Property_Owner__c.field-meta.xml
<CustomField>
    <fullName>Property_Owner__c</fullName>
    <description>Property_Owner is the Master</description>
    <label>Property Owner</label>
    <referenceTo>Property_Owners__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>