force-app/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Property is located in this State</description>
    <inlineHelpText>Property is located in this State</inlineHelpText>
    <label>State</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>