force-app/main/default/objects/Property__c/fields/Year_of_Construction__c.field-meta.xml
<CustomField>
    <fullName>Year_of_Construction__c</fullName>
    <description>This Property is constructed in the year</description>
    <inlineHelpText>This Property is constructed in the year</inlineHelpText>
    <label>Year of Construction</label>
    <type>Date</type>
</CustomField>