force-app/main/default/objects/Property__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <description>Zip Code of the Property</description>
    <inlineHelpText>Zip Code of the Property</inlineHelpText>
    <label>Zip Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>